# SimuladorJiuJitsu

./: .gitignore  CMakeLists.txt  Grafo.csv  README.txt  build_sim.sh
main/: main.cpp
main/include/: arbiter_random.hpp  arbiter_smart.hpp  fight_engine.hpp  fight_engine_state.hpp  fight_state.hpp  fighterA.hpp  fighterB.hpp  fighter_profile.hpp  fighter_state.hpp  messages.hpp  profile_manager.hpp  role_helper.hpp  scoring.hpp  simple_profiles_tactical.hpp  technique.hpp  technique_loader.hpp  top.hpp  transition_graph.hpp
